// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros as key: as key 1`] = `

import { $ } from '../../ref.macro';

const state = { [ $( 'foo' ) ]: true };

      ↓ ↓ ↓ ↓ ↓ ↓

const state = { ['foo']: true };

`;

exports[`macros as member: as member 1`] = `

import { $ } from '../../ref.macro';

const foo = $.bar ;

      ↓ ↓ ↓ ↓ ↓ ↓

const foo = 'bar';

`;

exports[`macros cjs as key: cjs as key 1`] = `

import babel_macro from '../../ref.macro';

const state = { [ babel_macro.$( 'foo' ) ]: true };

      ↓ ↓ ↓ ↓ ↓ ↓

const state = { ['foo']: true };

`;

exports[`macros cjs as member: cjs as member 1`] = `

import babel_macro from '../../ref.macro';

const foo = babel_macro.$.bar ;

      ↓ ↓ ↓ ↓ ↓ ↓

const foo = 'bar';

`;

exports[`macros cjs member as key: cjs member as key 1`] = `

import babel_macro from '../../ref.macro';

const state = { [ babel_macro.$.foo ]: true };

      ↓ ↓ ↓ ↓ ↓ ↓

const state = { ['foo']: true };

`;

exports[`macros cjs this$ assign: cjs this$ assign 1`] = `

import babel_macro from '../../ref.macro';

babel_macro.this$.foo = 1;

      ↓ ↓ ↓ ↓ ↓ ↓

this['foo'] = 1;

`;

exports[`macros cjs this$ call: cjs this$ call 1`] = `

import babel_macro from '../../ref.macro';

babel_macro.this$.foo( 1 );

      ↓ ↓ ↓ ↓ ↓ ↓

this['foo'](1);

`;

exports[`macros cjs with args: cjs with args 1`] = `

import babel_macro from '../../ref.macro';

const foo = babel_macro.$( 'bar' ) ;

      ↓ ↓ ↓ ↓ ↓ ↓

const foo = 'bar';

`;

exports[`macros cjs without args: cjs without args 1`] = `

import babel_macro from '../../ref.macro';

const foo = babel_macro.$();

      ↓ ↓ ↓ ↓ ↓ ↓

const foo = 'foo';

`;

exports[`macros don't used: don't used 1`] = `

import '../../ref.macro';

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`macros member as key: member as key 1`] = `

import { $ } from '../../ref.macro';

const state = { [ $.foo ]: true };

      ↓ ↓ ↓ ↓ ↓ ↓

const state = { ['foo']: true };

`;

exports[`macros this$ assign: this$ assign 1`] = `

import { this$ } from '../../ref.macro';

this$.foo = 1;

      ↓ ↓ ↓ ↓ ↓ ↓

this['foo'] = 1;

`;

exports[`macros this$ call: this$ call 1`] = `

import { this$ } from '../../ref.macro';

this$.foo( 1 );

      ↓ ↓ ↓ ↓ ↓ ↓

this['foo'](1);

`;

exports[`macros with args: with args 1`] = `

import { $ } from '../../ref.macro';

const foo = $( 'bar' ) ;

      ↓ ↓ ↓ ↓ ↓ ↓

const foo = 'bar';

`;

exports[`macros without args: without args 1`] = `

import { $ } from '../../ref.macro';

const foo = $();

      ↓ ↓ ↓ ↓ ↓ ↓

const foo = 'foo';

`;
